--- a/Programando na Linguagem Web/introducao-javascript-inicial/index.html
+++ b/Programando na Linguagem Web/introducao-javascript-inicial/index.html
@@ -31,7 +31,7 @@
 					</tr>
 				</thead>
 				<tbody id="tabela-pacientes">
-					<tr class="paciente" id="Primeiro-Paciente">
+					<tr class="paciente">
 						<td class="info-nome">Paulo</td>
 						<td class="info-peso">100</td>
 						<td class="info-altura">2.00</td>
@@ -49,7 +49,7 @@
 
 					<tr class="paciente">
 						<td class="info-nome">Erica</td>
-						<td class="info-peso">54</td>
+						<td class="info-peso">80</td>
 						<td class="info-altura">1.64</td>
 						<td class="info-gordura">14</td>
 						<td class="info-imc">0</td>
@@ -74,6 +74,39 @@
 
 		</section>
 	</main>
+
+<!--Formulario de Cadastro de Novo Paciente-->
+<section class="container">
+	<h2 id="titulo-form">Cadatrar novo paciente</h2>
+	<form id="form-adiciona">
+		<div class="grupo">
+			<label for="nome">Nome:</label>
+			<input id="nome" name="nome" type="text" placeholder="digite o nome do seu paciente" class="campo">
+		</div>
+		<div class="grupo">
+			<label for="peso">Peso:</label>
+			<input id="peso" name="peso" type="text" placeholder="digite o peso do seu paciente"
+				class="campo campo-medio">
+		</div>
+		<div class="grupo">
+			<label for="altura">Altura:</label>
+			<input id="altura" name="altura" type="text" placeholder="digite a altura do seu paciente"
+				class="campo campo-medio">
+		</div>
+		<div class="grupo">
+			<label for="gordura">% de Gordura:</label>
+			<input id="gordura" type="text" placeholder="digite a porcentagem de gordura do seu paciente"
+				class="campo campo-medio">
+		</div>
+
+		<button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
+	</form>
+</section>
+
+
+
+
+
 
 	<script src="js/principal.js"></script>
 
