--- a/Programando na Linguagem Web/introducao-javascript-inicial/index.html
+++ b/Programando na Linguagem Web/introducao-javascript-inicial/index.html
@@ -109,7 +109,8 @@
 
 
 
-	<script src="js/principal.js"></script>
+	<script src="js/calcula-imc.js"></script>
+	<script src="js/form.js"></script>
 
 
 </body>
