Validando o restante dos campos

--- a/Programando na Linguagem Web/introducao-javascript-inicial/index.html
+++ b/Programando na Linguagem Web/introducao-javascript-inicial/index.html
@@ -79,6 +79,10 @@
 	<!--Formulario de Cadastro de Novo Paciente-->
 	<section class="container">
 		<h2 id="titulo-form">Cadatrar novo paciente</h2>
+		<ul id="mensagens-erros">
+			<li></li>
+			<li></li>
+		</ul>
 		<form id="form-adiciona">
 			<div class="grupo">
 				<label for="nome">Nome:</label>
@@ -103,11 +107,6 @@
 			<button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
 		</form>
 	</section>
-
-
-
-
-
 
 	<script src="js/calcula-imc.js"></script>
 	<script src="js/form.js"></script>
